[package]
name = "jaas"
version = "0.1.0"
authors = ["anhar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
canteen = "0.5.5"
json = "*"
uuid = { version = "0.7", features = ["v4"] }
reqwest  = "0.9.19"